--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^4.5.0",
     "jbuilder": "^0.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-actioncable-provider": "^2.0.0",
     "react-dom": "^16.13.1",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0",
     "turbolinks": "^5.2.0"
